--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@
     pointer-events: none;
 } */
 
-.modal-back {
+/* .modal-back {
     position: fixed;
     top: 0;
     right: 0;
@@ -83,9 +83,9 @@
     align-items: center;
     background-color: rgba(0, 0, 0, .75);
     z-index: 10000;
-}
+} */
 
-.modal-window {
+/* .modal-window {
     max-height: 350px;
     width: 450px;
     background-color: white;
@@ -102,7 +102,7 @@
     margin: 1em 0;
     display: flex;
     justify-content: center;
-}
+} */
 
 .alert-container {
     position: absolute;
