--- a/src/App.css
+++ b/src/App.css
@@ -104,7 +104,7 @@
     justify-content: center;
 } */
 
-.alert-container {
+/* .alert-container {
     position: absolute;
     top: 15%;  
     left: 50%; 
@@ -120,4 +120,4 @@
 .alert-message_error {
     border: 2.5px solid red;
     padding: 10px;
-}
+} */
